# flux-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.md  flux.toml  outline.md  rust-toolchain  slides.md
compare/: flux-fft.rs  flux-kmeans.rs  flux-kmp.rs  flux-vectors.rs  matwrapper.rs  prusti-fft.rs  prusti-kmeans.rs  prusti-kmp.rs  prusti-vectors.rs  verus-weights.rs
complete/: full.rs
external_proofs/: Cargo.toml  README.md
external_proofs/src/: fib.rs  ghost_index.rs  in_place_insertion_sort.rs  lib.rs  svec.rs  svec2.rs  svec3.rs
full/: basics.rs  borrows.rs  full.rs  vectors.rs
lean_proofs/LeanProofs/: Basic.lean  Defs.lean  FibFibFast.lean  FibFibFastProof.lean  FibFibSlow.lean  FibFibSlowProof.lean  InPlaceInsertionSortInPlaceInsertionSort.lean  InPlaceInsertionSortInPlaceInsertionSortProof.lean  InPlaceInsertionSortInsertSorted.lean  InPlaceInsertionSortInsertSortedProof.lean  InferredInstance.lean  InsertSorted.lean  InsertSortedProof.lean  Instance.lean  LemmaAppendEmptyRfl.lean  LemmaAppendEmptyRflProof.lean  LemmaAppendPushExtend.lean  LemmaAppendPushExtendProof.lean  LemmaEmptyAppendLeftIdentity.lean  LemmaEmptyAppendLeftIdentityProof.lean  LemmaEmptyPushSorted.lean  LemmaEmptyPushSortedProof.lean  LemmaSliceFromToEqEmpty.lean  LemmaSliceFromToEqEmptyProof.lean  LemmaSliceGet.lean  LemmaSliceGetProof.lean  LemmaSlicePushExtend.lean  (+31 more)
slides/: 00-intro.typ  01-refinements.typ  02-ownership.typ  03-datatypes.typ  04-interfaces.typ  05-tock.typ  06-outro.typ  Makefile  anf.typ  crisp.typ  iowa_crisp.typ  junk-saved.typ  junk.typ  mini.typ  slides.typ  sprite.typ
src/: anf.rs  arrays.rs  basics.rs  borrows.rs  chapter8-table.rs  chapter8.rs  csv.rs  cve.rs  demo.rs  dotproduct.rs  eval.rs  kmeans-vec.rs  kmeans.rs  lists.rs  main.rs  mapreduce-rvec.rs  mapreduce-vec.rs  mapreduce.rs  mini_neural.rs  mini_vec_deque.rs  mpu.rs  mpu_mut.rs  neural.rs  range.rs  rbac.rs  ringbuffer.rs  rset.rs  rvec.rs  scope.rs  slice.rs  sparse.rs  table.rs  typestate.rs  typestate_addr.rs  typestate_bits.rs  typestate_spi.rs  uninit.rs  vectors.rs
(+108 files in other folders)
