[package]
name = "flux-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[package.metadata.flux]
enabled = true

[dependencies]
flux-rs = { git = "https://github.com/flux-rs/flux" }

[lints.rust]
unexpected_cfgs = {level="warn", check-cfg=['cfg(flux)']}