[package]
name = "flux-demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[package.metadata.flux]
enabled = true

[dependencies]
# flux-rs = { git = "https://github.com/flux-rs/flux" }
flux-rs = { path = "/Users/rjhala/research/flux/lib/flux-rs" }
flux-core = { path = "/Users/rjhala/research/flux/lib/flux-core" }
flux-alloc = { path = "/Users/rjhala/research/flux/lib/flux-alloc" }
rand = "0.8"
# im = "15.1.0"

[lints.rust]
unexpected_cfgs = {level="warn", check-cfg=['cfg(flux)']}
